final_verification.txt
    Blocking waiting for file lock on build directory
    Checking siren v0.4.0 (C:\Users\pixel\Downloads\twister)
warning: unused variable: `nx`
   --> src\anc.rs:133:13
    |
133 |         let nx = speaker_out.len().min(n);
    |             ^^ help: if this is intentional, prefix it with an underscore: `_nx`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `ny`
   --> src\anc.rs:134:13
    |
134 |         let ny = mic_in.len().min(n);
    |             ^^ help: if this is intentional, prefix it with an underscore: `_ny`

error[E0521]: borrowed data escapes outside of method
   --> src\training.rs:321:9
    |
317 |           &self,
    |           -----
    |           |
    |           `self` is a reference that is only valid in the method body
    |           let's call the lifetime of this reference `'1`
...
321 | /         std::thread::spawn(move || {
322 | |             println!("[Mamba] Background training thread started");
323 | |             loop {
324 | |                 let batch = {
...   |
344 | |         });
    | |          ^
    | |          |
    | |__________`self` escapes the method body here
    |            argument requires that `'1` must outlive `'static`

warning: unused variable: `vbuf`
   --> src\main.rs:439:13
    |
439 |         let vbuf = vbuffer.clone();
    |             ^^^^ help: if this is intentional, prefix it with an underscore: `_vbuf`

For more information about this error, try `rustc --explain E0521`.
warning: `siren` (bin "siren") generated 3 warnings
error: could not compile `siren` (bin "siren") due to 1 previous error; 3 warnings emitted
